# architecture-patterns-with-python

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  dependencies.py  main.py  model.py  models.py  orm.py  repository.py  services.py
app/allocation/: constants.py
app/allocation/adapters/: dao.py  db.py  dto.py  email.py  orm.py  redis.py  repository.py
app/allocation/domain/: commands.py  events.py  models.py
app/allocation/entrypoints/: dependencies.py  restapi.py  run_worker.py
app/allocation/routers/: api.py  dependencies.py  main.py  worker.py
app/allocation/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
scripts/: shell.sh  start-dev.sh  start-worker.sh  test.sh
tests/: conftest.py  test_allocate.py  test_api.py  test_batches.py  test_main.py  test_orm.py  test_repository.py  test_service.py
tests/e2e/: test_api.py  test_external_events.py  test_worker.py
tests/integration/: test_dao.py  test_handler.py  test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_batches.py  test_handlers.py  test_product.py  test_services.py
