[tool.poetry]
name = "architecture-patterns-with-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
SQLAlchemy = {extras = ["asyncio", "mypy"], version = "^1.4.45"}
pydantic = "^1.10.3"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.138"
isort = "5.10.1"
black = "22.8.0"
mypy = "0.982"
pre-commit = "^2.20.0"
boto3 = "^1.26.20"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-env = "^0.8.1"
greenlet = "^2.0.1"
aiosqlite = "^0.18.0"
pytest-sugar = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.isort]
known-first-party = ["app"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10" 
ignore_missing_imports = true 
disallow_any_generics = true 
disallow_untyped_calls= true 
disallow_untyped_defs= true 
disallow_incomplete_defs = true 
disallow_untyped_decorators = true 
check_untyped_defs = true 
strict_optional = false 
warn_redundant_casts = true 
warn_unused_ignores = true 
allow_redefinition = true 
show_column_numbers = true 
pretty = true 

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "D:PG_DSN=postgresql+asyncpg://user:password@localhost:5432/app", # sqlite+aiosqlite:///:memory:
]